--- a/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -31,7 +31,7 @@
                                 <div class="ContainerIndent">
                                     <i class="fa fa-bell Fs20 animated swing infinite gray"></i>
                                     <span class="Fs14 DispBlock gray FontThemeLight">Messages</span>
-                                    <span id="advmsgcntntf" class="Fs24 DispBlock red FontThemeLight">#{adashbean.getMessage("AdvisorMessage")}</span>
+                                    <span id="advmsgcntntf" class="Fs30 DispBlock red">#{adashbean.getMessage("AdvisorMessage")}</span>
                                 </div>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
                                     <div class="ContainerIndent">
                                         <i class="fa fa-briefcase gray Fs20"></i>
                                         <span class="Fs14 DispBlock gray FontThemeLight">Tasks</span>
-                                        <span id="advtskcntntf" class="Fs30 DispBlock red ">#{adashbean.getMessage("Task")}</span>
+                                        <span id="advtskcntntf" class="Fs30 DispBlock red">#{adashbean.getMessage("Task")}</span>
                                     </div>
                                 </div>
                             </div>
