--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -180,8 +180,8 @@
 				</div>
 
 			</div>
-			<p:panel id="finalbuttonArea" style="background-color: transparent; border: 0px">
-				<div class="Container100 Responsive100 summaryPageBtn" style="text-align: center;">
+			<p:panel id="finalbuttonArea" styleClass="summaryPageBtn" style="background-color: transparent; border: 0px;">
+				<div class="Container100 Responsive100" style="text-align: center;">
 					<p:commandButton styleClass="prev ResponsiveBtnFS Fleft spWid100" id="tcmpnafprevious"
 									 value="Start Over" update=":ceForm:inputArea" immediate="true"
 									 actionListener="#{tcmpb.startover}" />
