Prashant 03/27/2017 - Email templates for TCM

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7A.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7A.xhtml
@@ -60,7 +60,7 @@
                                             <div class="ContainerIndent">
                                                 <p:commandButton id="allocSliderResetButton" value="Recommended"
                                                                  styleClass="uob_button"
-                                                                 update=":ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:tcmp7anext"
+                                                                 update=":ceForm:allocSlider, :ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:tcmp7anext"
                                                                  actionListener="#{tcmpb.doAllocReset}"/>
                                             </div>
                                         </div>
