--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -55,7 +55,7 @@
 									<div class="ContainerIndent">
 										<p:commandButton id="allocSliderResetButton" value="Recommended"
 														 styleClass="uob_button"
-														 update=":ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea"
+														 update=":ceForm:allocSlider, :ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea"
 														 actionListener="#{tcmpb.doAllocReset}"/>
 									</div>
 								</div>
