--- a/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv2.xhtml
@@ -31,7 +31,7 @@
 								<div class="Container100 Responsive100">
 									<div class="staticBlockMain Container20">
 										<div class="staticBlock">
-										<div class="Fs12 countValue">Aum</div>
+										<div class="Fs12 countValue">AUM</div>
 											<div class="Fs25 countlabel">
 												<h:outputText id="advactaumcnt" value="#{manageAdvisorBean.salesInfo.get('AUM')}">
                               <f:convertNumber pattern="$#,###,##0"/>
